academy: refactor
